  (bug #2968)
- Midi (timidity): fixed a coding mistake in recompute_amp (bug #2969)
- Native Midi: fixed memory leak in MIDItoStream() (bug #3072)
- Native Midi (macosx): make sure to set music player's sequence to
  NULL before disposing music sequence (bug #4573)
- Native Midi (macosx): use newer apis with newer macOS (bug #1566)
- Native Midi (windows): fixed possible crash.
- Midi (fluidsyth): fixed loading MIDI music leaks memory (bug #3018)
- Midi (fluidsyth): fixed calling Mix_Quit twice leading to segfault
  (bug #2004)
- Midi (fluidsyth): fixed no sf2 soundfonts loaded by default (debian
  bug #715461)
- Soundfont api functions are public and should always be available
  (bugs #3071, #3088)
- Music: fixed Mix_PlayMusic broken logic when loop > 1 (bug #2706)
- Music: fixed Mix_PlayMusic can't start playing when previous music
  was paused (bug #4216)
- Music: call Mix_HookMusicFinished when Mix_HaltMusic is called
  (bug #1610)
- Music: fixed memory leak issue in Mix_LoadMUSType_RW (bug #1833)
- Music, cmd player: added missing NULL check (bug #2970)
- Mixer: fixed looping behavior and Mix_Playing() result for looping
  channels
- Mixer: fixed Mix_FadeOutChannel never setting fade_volume_reset
  (bug #4770)
- Mixer: fixed floating point exception in Mix_Volume() (bug #2690)
- Mixer: fixed compilation error due to a missing include (bug #5296)
- Public apis respect the SDL calling convention (SDLCALL)
- Build: fixed configure failing to detect dynamic library support
  on powerpc64le (bug #3481)
- Build: fixed Makefile sleeping 3s if configure is outdated
  (bug #3733)
- Build: fixed configure selecting wrong lib (bug #2795)
- Build: fixed ogg support detection in static mode (bug #1604)
- Updated external libraries with multiple bug/security fixes.

1.2.12:
Sam Lantinga - Sat Jan 14 22:00:29 2012 -0500
 * Fixed seek offset with SMPEG (was relative, should be absolute)
Sam Lantinga - Fri Jan 13 03:04:27 EST 2012